language/move-compiler/tests/move_check/translate/friend_in_script.move
script {
    friend 0x2::M;
}
